--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-hook-form": "^7.47.0",
+    "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.8.6",
