--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-    "node": "^20",
+    "node": "^18",
     "npm": "^10"
   },
   "scripts": {
@@ -17,11 +17,13 @@
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.0",
+    "axios": "^1.5.1",
     "rc-table": "^7.35.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.17.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "zod": "^3.22.4"
   },
